OPENAPI: add modules  , couorses API
