# app/handlers/modules.go
@@ -10,6 +10,17 @@ import (
 	"madaurus/dev/material/app/utils"
 )
 
+// @Summary Edit Module Visibility
+// @Description Protected Route used to edit module visibility
+// @Produce json
+// @Accept json
+// @Tags Modules
+// @Param id path string true "Module ID"
+// @Param visibility query string true "Module Visibility"
+// @Success 200 {object} models.Module
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/visibility/{id} [PUT]
 func EditModuleVisibility(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		// module should be body type {id: string, isPublic: bool}
@@ -28,6 +39,16 @@ func EditModuleVisibility(collection *mongo.Collection) gin.HandlerFunc {
 	}
 }
 
+// @Summary Get Public Modules
+// @Description Protected Route used to get public modules
+// @Produce json
+// @Accept json
+// @Tags Modules
+// @Param filter body interfaces.ModuleFilter true "Module Filter"
+// @Success 200 {object} models.Module
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/public [POST]
 func GetPublicFilteredModules(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var filterModule interfaces.ModuleFilter
@@ -46,6 +67,16 @@ func GetPublicFilteredModules(collection *mongo.Collection) gin.HandlerFunc {
 	}
 }
 
+// @Summary Get Teacher Modules
+// @Description Protected Route used to get teacher modules
+// @Produce json
+// @Tags Modules
+// @Accept json
+// @Param filter body interfaces.ModuleFilter true "Module Filter"
+// @Success 200 {object} models.Module
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/teacher [GET]
 func GetTeacherFilteredModules(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var filterModule interfaces.ModuleFilter
@@ -64,6 +95,16 @@ func GetTeacherFilteredModules(collection *mongo.Collection) gin.HandlerFunc {
 	}
 }
 
+// @Summary Create Module
+// @Description Protected Route used to create a module
+// @Produce json
+// @Accept json
+// @Tags Modules
+// @Param module body models.Module true "Module Object"
+// @Success 200 {object} models.Module
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/create [POST]
 func CreateModule(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var module models.Module
@@ -83,6 +124,17 @@ func CreateModule(collection *mongo.Collection) gin.HandlerFunc {
 	}
 
 }
+
+// @Summary Update Module
+// @Description Protected Route used to update a module
+// @Produce json
+// @Accept json
+// @Tags Modules
+// @Param module body models.Module true "Module Object"
+// @Success 200 {object} models.Module
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/update [PUT]
 func UpdateModule(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var module models.Module
@@ -102,6 +154,16 @@ func UpdateModule(collection *mongo.Collection) gin.HandlerFunc {
 	}
 }
 
+// @Summary Delete Module
+// @Description Protected Route used to delete a module
+// @Produce json
+// @Accept json
+// @Param id path string true "Module ID"
+// @Success 200 {object} models.Module
+// @Tags Modules
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/delete/{id} [DELETE]
 func DeleteModule(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		user := c.MustGet("user").(*utils.UserDetails)
@@ -119,6 +181,16 @@ func DeleteModule(collection *mongo.Collection) gin.HandlerFunc {
 	}
 }
 
+// @Summary Get Module By ID
+// @Description Get Module By ID
+// @Produce json
+// @Accept json
+// @Tags Modules
+// @Param id path string true "Module ID"
+// @Success 200 {object} models.ExtendedModule
+// @Failure 400 {object} interfaces.APiError
+// @Failure 500 {object} interfaces.APiError
+// @Router /modules/{id} [GET]
 func GetModuleById(collection *mongo.Collection) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		moduleId, errP := c.Params.Get("id")
